changes related to vote feature, and sort by

--- a/src/styles/card.module.scss
+++ b/src/styles/card.module.scss
@@ -97,3 +97,10 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;  
 }
+
+.badge{
+  margin-left: 4px
+}
+.whiteColor{
+  color: #fff !important;
+}
